--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.1",
     "latest-version": "^7.0.0",
     "query-string": "^7.1.1",
+    "react-router": "^6.3.0",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
